# AlphaGo-Lite

./: .gitignore  .gitmodules  LICENSE  README.md  TrainCNN.py  Utils.py  processSGF.sh
cpp/: CMakeLists.txt
cpp/src/: main.cpp
python/: ExportCheckpoint.py  PrintBias.py  PrintWeight.py  SaveNPYImage.py  TrainCNN.py
